# pay-intern

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_create_users.sql  002_create_profiles.sql  003_create_listings.sql  004_create_applications.sql  005_create_outcome_reviews.sql  006_add_experience_level.sql  007_add_indexes.sql  008_add_payment_direction.sql  009_add_contact_preferences.sql  010_create_notifications.sql  011_create_notification_preferences.sql  012_create_saved_listings.sql  013_create_interests.sql  014_create_messages.sql  015_fix_application_status.sql  016_add_user_deletion.sql  017_dual_profiles_platform_generalization.sql  018_drop_old_tables.sql  019_rename_new_tables.sql  020_recreate_indexes.sql  021_rename_payment_direction.sql
backend/src/: config.rs  db.rs  error.rs  main.rs  routes.rs
backend/src/auth/: jwt.rs  middleware.rs
backend/src/handlers/: applications.rs  auth.rs  interests.rs  listings.rs  messages.rs  mod.rs  notifications.rs  outcome_reviews.rs  profiles.rs  users.rs
backend/src/middleware/: rate_limit.rs
backend/src/models/: application.rs  interest.rs  listing.rs  message.rs  mod.rs  notification.rs  outcome_review.rs  user.rs
backend/src/services/: application.rs  auth.rs  email.rs  interest.rs  listing.rs  message.rs  mod.rs  notification.rs  outcome_review.rs  user.rs
docs/: ARCHITECTURE.md  landing-page-specs.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package.json  (+2 more)
(+146 files in other folders)
