[package]
name = "devstage"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
tower_governor = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
governor = "0.6"
reqwest = { version = "0.12", features = ["json"] }
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
rand = "0.8"
thiserror = "2"
validator = { version = "0.19", features = ["derive"] }

[dev-dependencies]
axum-test = "16"
